[package]
name = "os"
version = "0.1.0"
edition = "2021"
test = false
bench = false

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.14.10"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[package.metadata.bootimage]
run-args = ["-drive", "format=raw,file=./harddrive.img"]
